@@ -4,6 +4,9 @@
 3. Minor: important changes to a mod
 4. Build: Whenever the mod is built by ForgeGradle (IDE builds don't count). Also independent from the other ones
 
+a1.0-6 (2014/08/06 17:26 GMT+0)
+- Fixed server crash (NoSuchFieldError) when a player logs in
+
 a1.0-5 (2014/08/06 16:03 GMT+0)
 - Fixed server crash: NoClassDefFoundError: net/minecraft/client/settings/KeyBinding
 
